<resources>
    <string name="app_name">ZEMO</string>
    <string name="sign_in_to_your_account">Sign In To Your Account</string>
    <string name="video_meeting_conference_app">Video Meeting|Conference App</string>
    <string name="welcome_to">Welcome To</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">22moatamed</string>

    <string name="you_example_com">You_example@com</string>
    <string name="we_need_a_few_details_to_get_account_ready">We need a few details to get account ready</string>
    <string name="password2">Password</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>

</resources>
