<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SignInActivity"
    android:background="@color/colorBackground">


<androidx.constraintlayout.widget.ConstraintLayout

android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:id="@+id/layoutHeader"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_16ssp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/video_meeting_conference_app"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_16ssp"
                android:includeFontPadding="false"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSignIn"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/regular"
            android:includeFontPadding="false"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/Signcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/textSignIn">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/email"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"/>
                <EditText
                    android:id="@+id/signInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/regular"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/password2"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"/>
                <EditText
                    android:id="@+id/signInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/regular"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="numberPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13sdp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signinbutton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colorTextIcon"
            app:layout_constraintTop_toBottomOf="@+id/Signcard"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/colorPrimaryDark"
            android:onClick="SignInBtn"/>
    <ProgressBar
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/signProgressBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/signinbutton"
        app:layout_constraintTop_toTopOf="@id/signinbutton"
        app:layout_constraintStart_toStartOf="@id/signinbutton"
        app:layout_constraintEnd_toEndOf="@id/signinbutton"/>
        <TextView
            android:id="@+id/textneedaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/regular"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13sdp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintTop_toBottomOf="@+id/signinbutton"/>
        <TextView
            android:id="@+id/textsingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_6sdp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="SignUpTextBtn"
            app:layout_constraintTop_toBottomOf="@id/textneedaccount"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
