<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SignUpActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/imageBack"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/colorTextIcon"
            android:onClick="ImageClick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/bold"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextIcon"
            android:textSize="@dimen/_15sdp"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:fontFamily="@font/regular"
                android:text="@string/we_need_a_few_details_to_get_account_ready"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_15sdp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                android:id="@+id/Signupcard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="First Name"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"/>

                    <EditText
                        android:id="@+id/inputfirstname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/regular"
                        android:hint="ex:Moatamed"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="Last Name"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:id="@+id/inputlastname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/regular"
                        android:hint="ex:Wageh"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="@string/email"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:id="@+id/inputemail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/regular"
                        android:hint="@string/you_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="Password"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:id="@+id/inputpassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/regular"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="numberPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text=" Confirm Password"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:id="@+id/inputconfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/regular"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="numberPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13sdp"/>



                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupbutton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:fontFamily="@font/bold"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/colorTextIcon"
                    app:layout_constraintTop_toBottomOf="@+id/Signupcard"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="SignUpBtn"/>
                <ProgressBar
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:id="@+id/signUpPrgressBar"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>


            </FrameLayout>


            <TextView
                android:id="@+id/texthaveaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13sdp"
                android:text="Have an an account !"
                app:layout_constraintTop_toBottomOf="@+id/signupbutton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/_6sdp"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="SignTextbtn"
                app:layout_constraintTop_toBottomOf="@id/texthaveaccount"/>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>